# visionforge-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 576b70e72e64_initial_schema.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: experiments.py  health.py  models.py  training.py
core/: __init__.py  dataset_analyzer.py  model_selector.py  optimizer.py  sklearn_trainer.py  tensorflow_trainer.py  trainer.py
db/: __init__.py  crud.py  database.py  models.py
deploy/aws/: README.md  deploy.sh  setup-ec2.sh
deploy/nginx/: nginx.conf
frontend/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/dataset/: page.tsx
frontend/src/app/inference/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/results/[jobId]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  FormControls.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py
ui/: __init__.py  compare.py  dataset.py  helpers.py  home.py  inference.py  models.py  results.py  settings.py  shared.py  theme.py  training.py
utils/: __init__.py  callbacks.py  config.py  data_factory.py  exceptions.py  logger.py  logging_config.py  metrics.py  model_factory.py  model_naming.py  platform_utils.py  settings.py
workers/: __init__.py  celery_app.py  training_tasks.py
